This file documents the revision history for the Monitoring Webinterface Thruk.

1.40     not yet released
          - use wait feature for acks/downtimes
          - panorama view:
            - added mine map panlet
            - added service details panlet
          - Bug Fixes
            - fixed reports when no state selected

1.38     Fri Jul 27 18:14:00 CEST 2012
          - added button to check/uncheck all columns for status excel export
          - panorama view:
            - added auto rotating tabs
            - added hosts / services panlet
            - added host / service totals panlet
            - added server metrics panlet
            - added filter for all host/services based panlets
            - generic url panlet can now show external urls
            - fixed generic url panlet when using css selector
          - Bug Fixes
            - fixed date verification in quick commands

1.36     Thu Jul 19 13:49:01 CEST 2012
          - added panorama view plugin
          - support flexible downtimes from the status page quick command
          - support recurring flexible downtimes
          - allow human readable values for duration filter like 5h or 10m
          - check version when using the check for updates link
          - clean up menu (don't show grid links in extra row)
          - allow wildcards in 'show_custom_vars'
          - added cgi sounds to tac page (if enabled)
          - added link for bug reports on internal errors (idea by the icinga team)
          - reporting:
            - reports can now be created for every page (html, xls, ...)
          - config tool:
            - added plugin & addon manager
            - show hostgroup name on hosts service list
            - fixed unregistered hostgroups showing up as warning
            - fixed commands in orphaned objects list
          - Bug Fixes
            - downtimes: fixed display of flexible downtimes
            - recurring downtimes: fixed adding downtimes on sunday