@@ -273,13 +273,19 @@ sub begin : Private {
         # return here for static content, no backend needed
         if(   $c->request->action =~ m|thruk/\w+\.html|mx
            or $c->request->action =~ m|thruk\\\/\w+\\.html|mx
+           or $c->request->action =~ m|thruk\\\/conf\\.cgi\?sub=backends|mx
            or $c->request->action eq 'thruk$'
            or $c->request->action eq 'thruk\\/docs\\/' ) {
             $c->stash->{'no_auto_reload'} = 1;
             return;
         }
-        return $c->detach("/error/index/14");
-
+        # redirect to backens manager if admin user
+        if( $c->config->{'use_feature_configtool'} ) {
+            $c->{'request'}->{'parameters'}->{'sub'} = 'backends';
+            return $c->detach('/conf/index');
+        } else {
+            return $c->detach("/error/index/14");
+        }
     }
 
     # set check_local_states
