@@ -1,6 +1,7 @@
 This file documents the revision history for the Monitoring Webinterface Thruk.
 
 1.40     not yet released
+          - change backends in config tool
           - use wait feature for acks/downtimes
           - panorama view:
             - added mine map panlet
